pierre/css/bezierjs-10-bspline.css
/* ... */
.radio-item-hypo input[type=radio]:checked + label:after {
  position: absolute;
  display: inline-block;
  border-radius: 11px;
  width: 12px;
  height: 12px;
  top: 20px;
  right: 9px;
  content: " ";
  background: #ff9d00;
}

#hateful {
/*    width: 0px;*/
}

/********************************************/
 hr {
    color: #3e3e3e;
     border-color: #3e3e3e;
}
.text_color_1 {
    color: rgb(255,3,123);
    transition: 0.8s;
}
.text_color_2 {
    color: rgb(77,235,255);
    transition: 0.8s;
}

.text_color_3 {
    color: rgb(241,255,48);
    transition: 0.8s;
}

.text_color_4 {
    color: rgb(154,0,255);
    transition: 0.8s;
}

.wrap-non {
    white-space: nowrap;
}

label[for='transparency_range_1'],label[for='transparency_range_2'],label[for='transparency_range_3'],label[for='transparency_range_4']{

    padding-bottom: 0;
    padding-right: 3px;
}

#transparency_range_1, #transparency_range_2, #transparency_range_3 {
    margin-bottom: 0px;
}

#transparency_range_1, #transparency_range_2, #transparency_range_3, #transparency_range_4 {
    margin-right: 17px;
}

.darkgray_text {
    color: dimgray;
    margin-right: 4px;
}

input[type='number'] {
max-height: 30px;
    max-width: 70px;
}

/*
label[for='r_spiro']{
    padding-top: 0;
}

label[for='point_on_small_r']{
    padding-top: 0;
}
*/

input[type='radio']{
    margin-top: -1px;
    margin-right: 9px;
}

input#spiro_option {
    margin-left: 0;
    margin-right: 43px;
}

input#draw_grid {
    margin-left: 0;
    margin-right: 6px;
}

.adjust_rule {
    margin: 12px auto;
}

#handle_outline_viz {
    margin-left: 0;
    margin-right: 8px;
/*    opacity: 0.5;*/
    transition: 0.8s;
}

#handle_outline_viz:hover {
    opacity: 0.9;
}

#pause_resume_btn {
/*    color: #505050;*/
    color: #a8a8a8;
    min-width: 74px;
    margin-top: 8px;
    margin-bottom: 5px;
    margin-left: 0;
    transition: 0.8s;
}

#pause_resume_btn:hover {
    opacity: 1.0;
    color: white !important;
    background-color: #3b3b3b;
}

/* CODE FOR CUSTOM SLIDER FROM https://www.w3schools.com/howto/howto_js_rangeslider.asp */
.slidecontainer {
    width: 100%; /* Width of the outside container */
}

/* The slider itself */
.slider {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  width: 47%; /* was 100% */
/*            max-width: 100%;*/
    padding: 0;
    margin: 15px 0px 15px 16px;
  height: 3px; /* Specified height */
  background: #ffffff; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
}

/* Mouse-over effects */
.slider:hover {
  opacity: 1; /* Fully shown on mouse-over */
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 25px;
  height: 15px;
    border: white 2px solid;
    border-radius: 25px;
  background: #000000;
  cursor: pointer;
}

.slider::-moz-range-thumb {
  width: 25px;
/*          height: 25px;*/
    border: white 2px solid;
    border-radius: 25px;
  background: #000000;
  cursor: pointer;
}

/* --END-- CODE FOR CUSTOM SLIDER --END-- */

.col-0 {
    display: flex;
    align-items: flex-start;
    flex-flow: wrap;
    width: 24.8%;
}

.reset-points-button {
    margin-top: 5px;
    margin-left: 20px;
}

.hidden {
/*    visibility: hidden;*/
    opacity: 0 !important;
}

.width_80 {
    width: 80%;
}

.full_width {
    width: 100%;
}


#vis_hide_1, #i_feel_love_checkbox {
    transition: 1.0s;
    padding-right: 2px;
}

#i_feel_love_checkbox {
    margin-right: 0;
}

#second_last_main_ui {
    margin-bottom: 0;
}

.remove_bottom_margin {
    margin-bottom: 0;
}
#readout_laser_strength {
    margin: 8px 0 0 8px;
    text-align: left;
    min-width: 42px;
}

#slider_bspline_weight_1,#slider_bspline_weight_2,#slider_bspline_weight_3 {
    width: 98%;
    margin: 11px 0px 6px 6px;
}

.slider-col-1 {
    margin: 6px 2px 0 0;
}

.slider-col-2 {
    width: 51%;
}

.slider-col-3 {
    width: 13%;
}

#slider_full_label_1,#slider_full_label_2,#slider_full_label_3 {
    margin: 0;
    padding: 0;
}

#note_shape_4 {
	margin-left: 20px;
	position: absolute;
	width: 25%;
	text-align: left;
	bottom: 17px;
	font-size: 0.9rem;
	line-height: 1.2rem;
    letter-spacing: 0.7px;
	color: #5a5a5a;
}

input.dimmed, label.dimmed{
    opacity: 0.5;
}

.jw_ui_controller::after {
    content: "•";
    display: inline-block;
    position: relative;
    top: 7px;
    margin: 0px 6px 0 10px;
    transition: all 400ms;
    font-size: 32px;
    line-height: 0;
    opacity: 0;
    transition: 400ms;
    }
  
    .shape-is-showing::after {
      opacity: 1;
    }  

#phone_modal {
    display: none;
    position: absolute;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: -6;
    background-color: #000000c0;
    align-items: center;
    }

@media screen and (max-width: 1023px) {
    #phone_modal {
        display: flex;
        z-index: 6;
    }
}

#phone_modal > div {
margin: 0 auto;
width: 70%;
text-align: center;
}

#phone_modal h3 {
font-size: 2rem;
font-weight: 400;
line-height: 2.6rem;
}

#phone_modal button {
font-size: 1.5rem;
}

.hide {
    transition: opacity 200ms, display 200ms;
    display: none;
    opacity: 0;
}

#phone_modal.hide {
    z-index: -6;
}
/* ... */

